--- a/CheckGrocerySalesData.ipynb
+++ b/CheckGrocerySalesData.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sdfStores = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/stores.csv\",header = True,inferSchema = True)"
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +78,8 @@
     }
    ],
    "source": [
-    "sdfStores.describe().show()"
+    "sdfStores.describe().show()\n",
+    "#Count matches as seen below as well"
    ]
   },
   {
@@ -100,6 +103,18 @@
    ],
    "source": [
     "sdfStores.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# First 5 rows by opening the file in windows:\n",
+    "# 1,Quito,Pichincha,D,13\n",
+    "# 2,Quito,Pichincha,D,13\n",
+    "# 3,Quito,Pichincha,D,8\n",
+    "# 4,Quito,Pichincha,D,9\n",
+    "# 5,Santo Domingo,Santo Domingo de los Tsachilas,D,4"
    ]
   },
   {
@@ -127,13 +142,6 @@
     }
    ],
    "source": [
-    "# First 5 rows by opening the file in windows:\n",
-    "# 1,Quito,Pichincha,D,13\n",
-    "# 2,Quito,Pichincha,D,13\n",
-    "# 3,Quito,Pichincha,D,8\n",
-    "# 4,Quito,Pichincha,D,9\n",
-    "# 5,Santo Domingo,Santo Domingo de los Tsachilas,D,4\n",
-    "\n",
     "# Verify that the same records are present in the file in HDFS:\n",
     "print(sdfStores.show(5))\n",
     "\n",
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +221,7 @@
        "1218"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,32 +229,6 @@
    "source": [
     "sdfOil.count()\n",
     "#1218 records are present when opened in excel."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+------------------+\n",
-      "|summary|        dcoilwtico|\n",
-      "+-------+------------------+\n",
-      "|  count|              1175|\n",
-      "|   mean| 67.71436595744689|\n",
-      "| stddev|25.630475729453117|\n",
-      "|    min|             26.19|\n",
-      "|    max|            110.62|\n",
-      "+-------+------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "sdfOil.describe().show()"
    ]
   },
   {
@@ -374,7 +356,8 @@
     }
    ],
    "source": [
-    "sdfHolidayEvents.describe().show()"
+    "sdfHolidayEvents.describe().show()\n",
+    "#Count matches as seen below as well"
    ]
   },
   {
@@ -506,7 +489,8 @@
     }
    ],
    "source": [
-    "sdfItems.describe().show()"
+    "sdfItems.describe().show()\n",
+    "#Count matches as seen below as well"
    ]
   },
   {
@@ -678,7 +662,8 @@
     }
    ],
    "source": [
-    "sdfTransactions.describe().show()"
+    "sdfTransactions.describe().show()\n",
+    "#Count matches as seen below as well"
    ]
   },
   {
@@ -807,7 +792,8 @@
     }
    ],
    "source": [
-    "sdfSampleSubmission.describe().show()"
+    "sdfSampleSubmission.describe().show()\n",
+    "#Count matches as seen below as well"
    ]
   },
   {
@@ -977,7 +963,8 @@
     }
    ],
    "source": [
-    "sdfTest.describe().show()"
+    "sdfTest.describe().show()\n",
+    "#Count matches as seen below as well"
    ]
   },
   {
@@ -1103,7 +1090,7 @@
    },
    "outputs": [],
    "source": [
-    " sdfTrain = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/train.csv\",header = True,inferSchema = True)"
+    " sdfTrain = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/train_partial.csv\",header = True,inferSchema = True)"
    ]
   },
   {
@@ -1126,7 +1113,8 @@
     "# Count of lines by opening the file in windows using Powershell: 125497041\n",
     "# If the count in HDFS is different, then the full file did not upload.\n",
     "\n",
-    "sdfTrain.count()"
+    "sdfTrain.count()\n",
+    "#Count before 13-May: 49391194"
    ]
   },
   {
@@ -1160,7 +1148,8 @@
    ],
    "source": [
     "sparkSession.sql('select count(*) from vwTrain').show()\n",
-    "# Count of lines by opening the file in windows using Powershell: 125497041"
+    "# Count of lines by opening the file in windows using Powershell: 125497041\n",
+    "# Count of records in the dataframe                             :  49391194 which is far less than the lines in windows"
    ]
   },
   {
@@ -1289,7 +1278,10 @@
    ],
    "source": [
     "sparkSession.sql('select max(id) from vwTrain').show()\n",
-    "# Max id in windows is 125497039"
+    "# Max id in windows is 125497039\n",
+    "# Max id in HDFS    is  49391192 which is far less than what is present in windows\n",
+    "# So it can be seen that the full file has not been uploaded to HDFS due to space constraints\n",
+    "# We have requested admin to increase the space"
    ]
   },
   {
