--- a/ExploreGrocerySalesData.ipynb
+++ b/ExploreGrocerySalesData.ipynb
@@ -18,13 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import col, countDistinct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import isnan, when, count, col"
    ]
   },
   {
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -89,6 +100,215 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----+-----+----+-------+\n",
+      "|store_nbr|city|state|type|cluster|\n",
+      "+---------+----+-----+----+-------+\n",
+      "|        0|   0|    0|   0|      0|\n",
+      "+---------+----+-----+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfStores.select([count(when(col(c).isNull(), c)).alias(c) for c in sdfStores.columns]).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"city\").distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+\n",
+      "|         city|\n",
+      "+-------------+\n",
+      "|      Quevedo|\n",
+      "|       Cuenca|\n",
+      "|     Guaranda|\n",
+      "|Santo Domingo|\n",
+      "|       Playas|\n",
+      "+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"city\").distinct().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"state\").distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|     state|\n",
+      "+----------+\n",
+      "|    Manabi|\n",
+      "|  Cotopaxi|\n",
+      "| Pichincha|\n",
+      "|Chimborazo|\n",
+      "|    Guayas|\n",
+      "+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"state\").distinct().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"type\").distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+\n",
+      "|type|\n",
+      "+----+\n",
+      "|   E|\n",
+      "|   B|\n",
+      "|   D|\n",
+      "|   C|\n",
+      "|   A|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"type\").distinct().show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"cluster\").distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+\n",
+      "|cluster|\n",
+      "+-------+\n",
+      "|     12|\n",
+      "|      1|\n",
+      "|     13|\n",
+      "|      6|\n",
+      "|     16|\n",
+      "+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfStores.select(\"cluster\").distinct().show(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,8 +317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sdfOil = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/oil.csv\",header = True,inferSchema = True)"
@@ -145,6 +367,74 @@
    "source": [
     "sdfOil.agg(countDistinct(col(\"date\")).alias(\"count\")).show()\n",
     "# date is the primary key as distinct count and total row count match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+\n",
+      "|date|dcoilwtico|\n",
+      "+----+----------+\n",
+      "|   0|        43|\n",
+      "+----+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfOil.select([count(when(col(c).isNull(), c)).alias(c) for c in sdfOil.columns]).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+\n",
+      "|summary|        dcoilwtico|\n",
+      "+-------+------------------+\n",
+      "|  count|              1175|\n",
+      "|   mean| 67.71436595744689|\n",
+      "| stddev|25.630475729453117|\n",
+      "|    min|             26.19|\n",
+      "|    max|            110.62|\n",
+      "+-------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdfOil.describe().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[46.41]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfOil.approxQuantile(\"dcoilwtico\", [0.5], 0.25)"
    ]
   },
   {
