--- a/CheckGrocerySalesData.ipynb
+++ b/CheckGrocerySalesData.ipynb
@@ -1090,7 +1090,7 @@
    },
    "outputs": [],
    "source": [
-    " sdfTrain = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/train_partial.csv\",header = True,inferSchema = True)"
+    " sdfTrain = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/train/train.csv\",header = True,inferSchema = True)"
    ]
   },
   {
@@ -1101,7 +1101,7 @@
     {
      "data": {
       "text/plain": [
-       "49391194"
+       "125497040"
       ]
      },
      "execution_count": 3,
@@ -1110,46 +1110,24 @@
     }
    ],
    "source": [
-    "# Count of lines by opening the file in windows using Powershell: 125497041\n",
-    "# If the count in HDFS is different, then the full file did not upload.\n",
+    "# Count of lines by opening the file in windows using Powershell (excl header): 125497040\n",
+    "# Count of records in the dataframe                                           : 125497040\n",
+    "# The entire file has been successfully uploaded\n",
     "\n",
     "sdfTrain.count()\n",
-    "#Count before 13-May: 49391194"
+    "#Count before 13-May: 49391194 (Entire file did not get uploaded)\n",
+    "#Count on 19-May: 125497040 (Entire file has been uploaded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "sdfTrain.createOrReplaceTempView(\"vwTrain\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+\n",
-      "|count(1)|\n",
-      "+--------+\n",
-      "|49391194|\n",
-      "+--------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "sparkSession.sql('select count(*) from vwTrain').show()\n",
-    "# Count of lines by opening the file in windows using Powershell: 125497041\n",
-    "# Count of records in the dataframe                             :  49391194 which is far less than the lines in windows"
    ]
   },
   {
@@ -1166,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1228,17 +1206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+----+---------+--------+----------+-----------+\n",
-      "| id|date|store_nbr|item_nbr|unit_sales|onpromotion|\n",
-      "+---+----+---------+--------+----------+-----------+\n",
-      "+---+----+---------+--------+----------+-----------+\n",
+      "+---------+-------------------+---------+--------+----------+-----------+\n",
+      "|       id|               date|store_nbr|item_nbr|unit_sales|onpromotion|\n",
+      "+---------+-------------------+---------+--------+----------+-----------+\n",
+      "|125497035|2017-08-15 00:00:00|       54| 2089339|       4.0|      false|\n",
+      "|125497036|2017-08-15 00:00:00|       54| 2106464|       1.0|       true|\n",
+      "|125497037|2017-08-15 00:00:00|       54| 2110456|     192.0|      false|\n",
+      "|125497038|2017-08-15 00:00:00|       54| 2113914|     198.0|       true|\n",
+      "|125497039|2017-08-15 00:00:00|       54| 2116416|       2.0|      false|\n",
+      "+---------+-------------------+---------+--------+----------+-----------+\n",
       "\n",
       "None\n"
      ]
