--- a/CheckGrocerySalesData.ipynb
+++ b/CheckGrocerySalesData.ipynb
@@ -1079,7 +1079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Check file #8 train.csv</b> <br/> <font color='red'>Note: This file did not get uploaded fully due to space limit for us in HDFS </font>"
+    "<b>Check file #8 train.csv</b> <br/>"
    ]
   },
   {
@@ -1132,14 +1132,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------------------+------------------+-----------------+------------------+\n",
+      "|summary|                 id|         store_nbr|         item_nbr|        unit_sales|\n",
+      "+-------+-------------------+------------------+-----------------+------------------+\n",
+      "|  count|          125497040|         125497040|        125497040|         125497040|\n",
+      "|   mean|       6.27485195E7|27.464578025107205| 972769.152722598| 8.554865268438212|\n",
+      "| stddev|3.622787505758819E7| 16.33051030272046|520533.5986107415|23.605151809802148|\n",
+      "|    min|                  0|                 1|            96995|          -15372.0|\n",
+      "|    max|          125497039|                54|          2127114|           89440.0|\n",
+      "+-------+-------------------+------------------+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#sdfTrain.describe().show()\n",
-    "#Did not run this - It may take very long time."
+    "sdfTrain.describe().show()"
    ]
   },
   {
