--- a/ExploreGrocerySalesData.ipynb
+++ b/ExploreGrocerySalesData.ipynb
@@ -2132,13 +2132,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "unit_sales = sdfTrain.select(\"unit_sales\").collect()\n",
-    "sns.distplot(unit_sales, color=p)"
+    "sns.distplot(unit_sales, color=p)\n",
+    "\n",
+    "#Could not get this to work. Got the below error:\n",
+    "#Py4JJavaError: An error occurred while calling o76.collectToPython.\n",
+    "#org.apache.spark.SparkException: Job 12 cancelled because SparkContext was shut down"
    ]
   },
   {
