--- a/ExploreGrocerySalesData.ipynb
+++ b/ExploreGrocerySalesData.ipynb
@@ -2135,12 +2135,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit_sales = sdfTrain.select(\"unit_sales\").collect()\n",
-    "sns.distplot(unit_sales, color=p)\n",
+    "#unit_sales = sdfTrain.select(\"unit_sales\").collect()\n",
+    "#sns.distplot(unit_sales, color=p)\n",
     "\n",
     "#Could not get this to work. Got the below error:\n",
     "#Py4JJavaError: An error occurred while calling o76.collectToPython.\n",
-    "#org.apache.spark.SparkException: Job 12 cancelled because SparkContext was shut down"
+    "#org.apache.spark.SparkException: Job 12 cancelled because SparkContext was shut down\n",
+    "\n",
+    "#So attempting to split and do the plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#executing\n",
+    "unit_sales_2013_m1 = sdfTrain.filter(sdfTrain.date < '2013-02-01 00:00:00').select(\"unit_sales\").collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size(unit_sales_2013_m1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sns.distplot(unit_sales_2013_m1, hist=False, color=g, kde_kws={\"shade\": True})"
    ]
   },
   {
